--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -34,3 +34,7 @@
 .button-gradient-two {
   background-image: linear-gradient(to bottom, #ffffff 0%, #c9d1f7 100%);
 }
+
+.test {
+  border: 1px solid red;
+}
