--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -21,6 +21,10 @@
   font-family: "Lexend", sans-serif;
 }
 
+.font-chonburi {
+  font-family: "Chonburi", serif;
+}
+
 .ellipsis {
   overflow: hidden;
   white-space: nowrap;
@@ -33,6 +37,22 @@
 
 .button-gradient-two {
   background-image: linear-gradient(to bottom, #ffffff 0%, #c9d1f7 100%);
+}
+
+.text-10px {
+  font-size: 10px;
+}
+
+.width-12-percent {
+  width: 12%;
+}
+
+.width-5-percent {
+  width: 5%;
+}
+
+.width-88px {
+  width: 88px;
 }
 
 .test {
