--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -2,7 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
+.no-scrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
 .react-responsive-modal-modal {
   border-radius: 10px;
   max-width: 900px;
