--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -72,3 +72,20 @@
 .test {
   border: 1px solid red;
 }
+
+.background {
+  position: relative;
+}
+.background::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.3;
+  background-image: url('/abujalogo.png');
+  background-size: 80% 80%;
+    /* or cover */
+    background-position: center;
+    background-repeat: no-repeat;
+  
+}
